# HotWl

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .luarc.json  .pre-commit-config.yaml  BUILD  CMakeLists.txt  Makefile  README.md  TODO.md  meson.build  tinywl.c
protocols/: meson.build
src/: BUILD  cursor.h  includes.hpp  input.c  input.cpp  input.h  input.hpp  keyboard.c  keyboard.cpp  keyboard.h  keyboard.hpp  layer_shell.c  layer_shell.cpp  layer_shell.h  layer_shell.hpp  main.c  main.cpp  meson.build  output.c  output.cpp  output.h  output.hpp  pointer.c  pointer.cpp  pointer.h  pointer.hpp  scene.c  scene.cpp  scene.h  scene.hpp  server.cpp  server.h  server.hpp  tiling_focus.c  tiling_focus.cpp  tiling_focus.h  tiling_focus.hpp  xdg_shell.c  xdg_shell.cpp  xdg_shell.h  (+1 more)
src/conf/: config.cpp  config.hpp  default_conf.lua  main.c  parse_conf.c  parse_conf.h
src/tiling/: container.cpp  container.hpp  focus.cpp  focus.hpp  hotswap.cpp  hotswap.hpp  marks.cpp  marks.hpp  state.cpp  state.hpp  tiler.hpp
src/tiling/container/: base.cpp  base.hpp  root.cpp  root.hpp  split.hpp  toplevel.cpp  toplevel.hpp
